feat: Menu screen and highlights on the home screen.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-12">
-                  <h1 class="coffee_taital">Nosso Cardápio</h1>
+                  <h1 class="coffee_taital">Destaques do Cardápio</h1>
                </div>
             </div>
          </div>
@@ -94,109 +94,37 @@
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/img-1.png"></div>
                               <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição dos produtos</p>
+                                 <h3 class="types_text">Bife Acebolado</h3>
+                                 <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um Bife Acebolado!!!">Fazer pedido</a></div>
                               </div>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/img-2.png"></div>
                               <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição dos produtos</p>
+                                 <h3 class="types_text">Linguiça Toscana</h3>
+                                 <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir uma Linguiça Toscana!!!">Fazer pedido</a></div>
                               </div>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/img-3.png"></div>
                               <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição dos produtos</p>
+                                 <h3 class="types_text">Frango ao Molho</h3>
+                                 <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um Frango ao molho!!!">Fazer pedido</a></div>
                               </div>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/img-4.png"></div>
                               <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição dos produtos</p>
+                                 <h3 class="types_text">Carne Cozida</h3>
+                                 <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir umA Carne Cozida!!!">Fazer pedido</a></div>
                               </div>
                            </div>
                         </div>
                      </div>
                   </div>
-                  <div class="carousel-item">
-                     <div class="container-fluid">
-                        <div class="row">
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-1.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição dos produtos</p>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-2.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição dos produtos</p>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-3.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição dos produtos</p>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-4.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição dos produtos</p>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="carousel-item">
-                     <div class="container-fluid">
-                        <div class="row">
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-1.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição dos produtos</p>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-2.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição dos produtos</p>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-3.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição dos produtos</p>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-4.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição dos produtos</p>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
+      
+                  
                </div>
-               <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
-               <i class="fa fa-arrow-left"></i>
-               </a>
-               <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
-               <i class="fa fa-arrow-right"></i>
-               </a>
             </div>
          </div>
       </div>
