--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-      <title>Oliene - Cardapio</title>
+      <title>Oliene Marmitaria - Cardápio</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -31,7 +31,7 @@
                      <li class="nav-item">
                         <a class="nav-link" href="index.html">Início</a>
                      </li>
-                     <li class="nav-item active">
+                     <li class="nav-item">
                         <a class="nav-link" href="menu.html">Cardápio</a>
                      </li>
                   </ul>
@@ -39,142 +39,100 @@
             </nav>
          </div>
       </div>
-      <div class="coffee_section layout_padding">
+      <div class="blog_section layout_padding">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
-                  <h1 class="coffee_taital">Nosso Cardápio</h1>
+                  <h1 class="about_taital">Nosso Cardápio</h1>
+                  <p>Todas as marmitas acompanham <span class="text-green">arroz, feijão, macarrão e salada</span>!!!</p>
                </div>
             </div>
-         </div>
-         <div class="coffee_section_2">
-            <div id="main_slider" class="carousel slide" data-ride="carousel">
-               <div class="carousel-inner">
-                  <div class="carousel-item active">
-                     <div class="container-fluid">
-                        <div class="row">
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-1.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição</p>
-                                 <div class="read_bt"><a href="#">Read More</a></div>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-2.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição</p>
-                                 <div class="read_bt"><a href="#">Read More</a></div>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-3.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição</p>
-                                 <div class="read_bt"><a href="#">Read More</a></div>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-4.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição</p>
-                                 <div class="read_bt"><a href="#">Read More</a></div>
-                              </div>
-                           </div>
-                        </div>
+            <div class="blog_section_2">
+               <div class="row">
+                  
+                  <div class="col-md-6">
+                     <div class="blog_box">
+                        <div class="blog_img"><img src="images/img-1.png"></div>
+                        <h4 class="date_text">Bife Acebolado</h4>
+                        <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um Bife Acebolado!!!">Fazer pedido</a></div>
                      </div>
                   </div>
-                  <div class="carousel-item">
-                     <div class="container-fluid">
-                        <div class="row">
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-1.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição</p>
-                                 <div class="read_bt"><a href="#">Read More</a></div>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-2.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição</p>
-                                 <div class="read_bt"><a href="#">Read More</a></div>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-3.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição</p>
-                                 <div class="read_bt"><a href="#">Read More</a></div>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-4.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição</p>
-                                 <div class="read_bt"><a href="#">Read More</a></div>
-                              </div>
-                           </div>
-                        </div>
+                  
+                  <div class="col-md-6">
+                     <div class="blog_box">
+                        <div class="blog_img"><img src="images/img-2.png"></div>
+                        <h4 class="date_text">Linguiça Toscana</h4>
+                        <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir uma Linguiça Toscana!!!">Fazer pedido</a></div>
                      </div>
                   </div>
-                  <div class="carousel-item">
-                     <div class="container-fluid">
-                        <div class="row">
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-1.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição</p>
-                                 <div class="read_bt"><a href="#">Read More</a></div>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-2.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição</p>
-                                 <div class="read_bt"><a href="#">Read More</a></div>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-3.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição</p>
-                                 <div class="read_bt"><a href="#">Read More</a></div>
-                              </div>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-4.png"></div>
-                              <div class="coffee_box">
-                                 <h3 class="types_text">NOME</h3>
-                                 <p class="looking_text">Descrição</p>
-                                 <div class="read_bt"><a href="#">Read More</a></div>
-                              </div>
-                           </div>
-                        </div>
+
+                  <div class="col-md-6 mt-5">
+                     <div class="blog_box">
+                        <div class="blog_img"><img src="images/img-3.png"></div>
+                        <h4 class="date_text">Frango ao molho</h4>
+                        <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um Frango ao molho!!!">Fazer pedido</a></div>
                      </div>
                   </div>
-               </div>
-               <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
-               <i class="fa fa-arrow-left"></i>
-               </a>
-               <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
-               <i class="fa fa-arrow-right"></i>
-               </a>
+
+                  <div class="col-md-6 mt-5">
+                     <div class="blog_box">
+                        <div class="blog_img"><img src="images/img-4.png"></div>
+                        <h4 class="date_text">Carne Cozida</h4>
+                        <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir umA Carne Cozida!!!">Fazer pedido</a></div>
+                     </div>
+                  </div>
+
+                  <div class="col-md-6 mt-5">
+                     <div class="blog_box">
+                        <div class="blog_img"><img src="images/img-5.png"></div>
+                        <h4 class="date_text">Lasanha de Carne</h4>
+                        <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir uma Lasanha de Carne!!!">Fazer pedido</a></div>
+                     </div>
+                  </div>
+
+                  <div class="col-md-6 mt-5">
+                     <div class="blog_box">
+                        <div class="blog_img"><img src="images/img-6.png"></div>
+                        <h4 class="date_text">Assado de Panela</h4>
+                        <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um Assado de Panela!!!">Fazer pedido</a></div>
+                     </div>
+                  </div>
+
+                  <div class="col-md-6 mt-5">
+                     <div class="blog_box">
+                        <div class="blog_img"><img src="images/img-7.png"></div>
+                        <h4 class="date_text">Bisteca Suína</h4>
+                        <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir uma Bisteca Suína!!!">Fazer pedido</a></div>
+                     </div>
+                  </div>
+
+                  <div class="col-md-6 mt-5">
+                     <div class="blog_box">
+                        <div class="blog_img"><img src="images/img-8.png"></div>
+                        <h4 class="date_text">Filé de Frango</h4>
+                        <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um Filé de Frango!!!">Fazer pedido</a></div>
+                     </div>
+                  </div>
+
+                  <div class="col-md-6 mt-5">
+                     <div class="blog_box">
+                        <div class="blog_img"><img src="images/img-9.png"></div>
+                        <h4 class="date_text">Fígado Acebolado</h4>
+                        <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um Fígado Acebolado!!!">Fazer pedido</a></div>
+                     </div>
+                  </div>
+
+                  <div class="col-md-6 mt-5">
+                     <div class="blog_box">
+                        <div class="blog_img"><img src="images/img-10.png"></div>
+                        <h4 class="date_text">Strogonoff de Frango</h4>
+                        <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um Strogonoff de Frango!!!">Fazer pedido</a></div>
+                     </div>
+                  </div>
             </div>
          </div>
       </div>
-      <div class="footer_section layout_padding margin_top90">
+      <div class="footer_section layout_padding mt-5">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
