feat: prices on the menu.

--- a/menu.html
+++ b/menu.html
@@ -51,9 +51,10 @@
                <div class="row">
                   
                   <div class="col-md-6">
-                     <div class="blog_box">
-                        <div class="blog_img"><img src="images/img-1.png"></div>
+                     <div class="blog_box mb-5">
+                        <div class="blog_img "><img src="images/img-1.png"></div>
                         <h4 class="date_text">Bife Acebolado</h4>
+                        <h2 class="text-green ml-4 mt-4">R$22,90</h2>
                         <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um Bife Acebolado!!!">Fazer pedido</a></div>
                      </div>
                   </div>
@@ -62,6 +63,7 @@
                      <div class="blog_box">
                         <div class="blog_img"><img src="images/img-2.png"></div>
                         <h4 class="date_text">Linguiça Toscana</h4>
+                        <h2 class="text-green ml-4 mt-4">R$22,90</h2>
                         <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir uma Linguiça Toscana!!!">Fazer pedido</a></div>
                      </div>
                   </div>
@@ -70,6 +72,7 @@
                      <div class="blog_box">
                         <div class="blog_img"><img src="images/img-3.png"></div>
                         <h4 class="date_text">Frango ao molho</h4>
+                        <h2 class="text-green ml-4 mt-4">R$25,90</h2>
                         <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um Frango ao molho!!!">Fazer pedido</a></div>
                      </div>
                   </div>
@@ -78,6 +81,7 @@
                      <div class="blog_box">
                         <div class="blog_img"><img src="images/img-4.png"></div>
                         <h4 class="date_text">Carne Cozida</h4>
+                        <h2 class="text-green ml-4 mt-4">R$25,90</h2>
                         <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir umA Carne Cozida!!!">Fazer pedido</a></div>
                      </div>
                   </div>
@@ -86,6 +90,7 @@
                      <div class="blog_box">
                         <div class="blog_img"><img src="images/img-5.png"></div>
                         <h4 class="date_text">Lasanha de Carne</h4>
+                        <h2 class="text-green ml-4 mt-4">R$28,00</h2>
                         <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir uma Lasanha de Carne!!!">Fazer pedido</a></div>
                      </div>
                   </div>
@@ -94,6 +99,7 @@
                      <div class="blog_box">
                         <div class="blog_img"><img src="images/img-6.png"></div>
                         <h4 class="date_text">Assado de Panela</h4>
+                        <h2 class="text-green ml-4 mt-4">R$25,90</h2>
                         <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um Assado de Panela!!!">Fazer pedido</a></div>
                      </div>
                   </div>
@@ -102,6 +108,7 @@
                      <div class="blog_box">
                         <div class="blog_img"><img src="images/img-7.png"></div>
                         <h4 class="date_text">Bisteca Suína</h4>
+                        <h2 class="text-green ml-4 mt-4">R$22,90</h2>
                         <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir uma Bisteca Suína!!!">Fazer pedido</a></div>
                      </div>
                   </div>
@@ -110,6 +117,7 @@
                      <div class="blog_box">
                         <div class="blog_img"><img src="images/img-8.png"></div>
                         <h4 class="date_text">Filé de Frango</h4>
+                        <h2 class="text-green ml-4 mt-4">R$22,90</h2>
                         <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um Filé de Frango!!!">Fazer pedido</a></div>
                      </div>
                   </div>
@@ -118,6 +126,7 @@
                      <div class="blog_box">
                         <div class="blog_img"><img src="images/img-9.png"></div>
                         <h4 class="date_text">Fígado Acebolado</h4>
+                        <h2 class="text-green ml-4 mt-4">R$22,00</h2>
                         <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um Fígado Acebolado!!!">Fazer pedido</a></div>
                      </div>
                   </div>
@@ -126,7 +135,17 @@
                      <div class="blog_box">
                         <div class="blog_img"><img src="images/img-10.png"></div>
                         <h4 class="date_text">Strogonoff de Frango</h4>
+                        <h2 class="text-green ml-4 mt-4">R$25,90</h2>
                         <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um Strogonoff de Frango!!!">Fazer pedido</a></div>
+                     </div>
+                  </div>
+
+                  <div class="col-md-6 mt-5">
+                     <div class="blog_box">
+                        <div class="blog_img"><img src="images/img-11.png"></div>
+                        <h4 class="date_text">Combo Especial</h4>
+                        <h2 class="text-green ml-4 mt-4">R$28,90</h2>
+                        <div class="read_btn"><a href="https://wa.me/5511976494934?text=Eu gostaria de pedir um combo!!!">Fazer pedido</a></div>
                      </div>
                   </div>
             </div>
